# qqnote

./: README.md  index2.html  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  hooks.ts  utils.ts
src-tauri/: .env  .taurignore  Cargo.toml  app_data.db  diesel.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-09-07-120628_create_note/: down.sql  up.sql
src-tauri/src/: db.rs  main.rs  models.rs  schema.rs
src/icons/: IconCloseCircle.tsx
